Bug 1739908 p1: Remove PersistentBufferProviderShared::mTextureLockIsUnreliable. r=lsalzman

This measure was originally put in to help with what was believed to be an issue
with ClearCachedResources, but we now think it was down to textures being
re-forwarded on tab switch when already read locked.
A change in bug 1717209 fixed this, so I think we can safely remove
mTextureLockIsUnreliable, which would cause some compilcations with the
following patch.

Differential Revision: https://phabricator.services.mozilla.com/D132601